<resources>
    <string name="app_name">JHBrowser</string>
    <string name="skip">跳过</string>
    <string name="browser">就来JH浏览器</string>
    <string name="begin_play">开始直播之旅</string>
    <string name="action_settings">Settings</string>

    <string name="input_address">搜索或输入网址</string>
    <string name="search_hotsopt">热点</string>
    <string name="search_application">应用</string>
    <string name="search_book">小说</string>
    <string name="search_video">视频</string>
    <string name="search_game">游戏</string>
    <string name="search_shop">商品</string>
    <string name="search_select_classify">选择搜索分类</string>
    <string name="search_cancel">取消</string>
    <string name="search_start">搜索</string>
    <string name="search_content">请输入搜索内容</string>
    <string name="dialog_login_menu">朕要登录啦...</string>
    <string name="personal_center">个人中心</string>
    <string name="btn_immediately_login">立即登录</string>
    <string name="my_collect">我的收藏</string>

    <string-array name="navigation_item">
        <item>手机酷站</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_string_file">我的文件</string>
    <string name="emptydir">该文件夹是空的</string>


    <string name="preference_category_settings_title">General Settings</string>
    <string name="preference_showhidden_title">Show Hidden Files</string>
    <string name="preference_showhidden_summary">Whether to show the File which name start with "."</string>
    <string name="preference_category_about_title">About</string>
    <string name="preference_help_title">Help</string>
    <string name="preference_help_summary">Find answers to your HDExplorer questions here</string>
    <string name="preference_help_intent_data">http://code.google.com/p/hdexplorer/w/list</string>
    <string name="preference_feedback_title">Feedback</string>
    <string name="preference_feedback_summary">Help us make the HDExplorer better</string>
    <string name="preference_feedback_intent_data">http://code.google.com/p/hdexplorer/issues/list</string>
    <string name="preference_thanks_key">thanksto</string>
    <string name="preference_thanks_title">Thanks</string>
    <string name="preference_thanks_summary">Thanks to the people for their help and support</string>
    <string name="preference_licenses_title">Open source licenses</string>
    <string name="preference_licenses_summary">License details for open source software</string>
    <string name="preference_licenses_intent_data">http://code.google.com/p/hdexplorer/wiki/License</string>
    <string name="preference_version_title">Application version</string>
    <string name="preference_version_summary">0.1.3</string>

    <string name="preference_showhidden_key">showhidden</string>
    <string name="preference_showhidden_default_value">false</string>


    <string name="dialog_create_folder_title">创建新文件夹</string>
    <string name="dialog_file_rename_title">重命名</string>
    <string name="dialog_file_details_title">属性</string>
    <string name="dialog_file_delete_title">确认</string>
    <string name="dialog_file_delete_message">确定删除 %1$s?</string>
    <string name="dialog_thanks_to_title">谢谢</string>
    <string name="dialog_thanks_to_message">This Software is developed and maintained by yanghui &lt;yanghui1986527@gmail.com&gt;,
Which includes Icon Sets developed by Matthieu James &lt;matthieu.james@gmail.com&gt;.\n\n

Thanks to the followings people for their help and support.\n\n <b>developers</b>\n
jiang jinfeng,Matthieu James\n\n <b>translators</b>\n
yang huan\n\n <b>testers</b>\n
yang ting,hu dalan,fu qianjuan,jiang jinfeng,xin huasheng,wei zixiong,luo cheng</string>


    <string name="button_text_yes">确定</string>
    <string name="button_text_no">取消</string>

    <string name="MY_AD_UNIT_ID">a14edf7f7b7136a</string>
    <string name="TEST_DEVICE_ID">0123456789ABCDEF</string>

    <string name="dialog_attribute_file_name">名称</string>
    <string name="dialog_attribute_file_size">大小</string>
    <string name="dialog_attribute_file_lastmodified">上次保存时间</string>
    <string name="toast_warn_scard_ejected">Sdcard Ejected.</string>

    <string name="menu_open_title">打开</string>
    <string name="menu_openwith_title">打开方式</string>
    <string name="menu_copy_title">复制</string>
    <string name="menu_cut_title">剪切</string>
    <string name="menu_paste_title">粘贴</string>
    <string name="menu_rename_title">重命名</string>
    <string name="menu_delete_title">删除</string>
    <string name="menu_attribute_title">属性</string>
    <string name="menu_newfolder_title">新文件夹</string>
    <string name="menu_settings_title">设置</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_confirm">确定</string>
    <string name="tv_add_bookmark">添加书签</string>
    <string name="clear_title">标题</string>
    <string name="clear_address">网址</string>
    <string name="setting_center">设置中心</string>
    <string name="set_personal">个人设置</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="set_about">关于我们</string>
    <string name="set_feedback">反馈有礼</string>

    <!-- Calendar -->
    <string name="calendar_Wes">三</string>
    <string name="nowday">今天</string>
    <string name="calendar_Sat">六</string>
    <string name="calendar_Fri">五</string>
    <string name="calendar_Thus">四</string>
    <string name="calendar_Tus">二</string>
    <string name="calendar_Mon">一</string>
    <string name="access_fail">访问失败</string>
    <string name="notes_no">没有记录</string>
    <string name="about">关于</string>
    <string name="clear_all_data">清除所有数据</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="change_login_way">更换登录方式</string>
    <string name="tv_pass_login">密码登录</string>
    <string name="et_username">用户名</string>
    <string name="et_password">密码</string>
    <string name="phone_login">手机验证登录</string>
    <string name="cl_telphone">电话</string>
    <string name="cl_age">出生年月日</string>

</resources>
