<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_addbookmark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/main_bg"
    tools:showIn="@layout/activity_add_bookmark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cancel"
            android:textColor="?attr/main_textcolor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tv_add_bookmark"
            android:textColor="?attr/main_textcolor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:text="@string/tv_confirm"
            android:textColor="?attr/main_textcolor" />
    </LinearLayout>
</android.support.v7.widget.Toolbar>